--- a/css/mohand.css
+++ b/css/mohand.css
@@ -1364,7 +1364,7 @@ bottom: 0;
  /* end top videos */
  /* start awesome */
  .awesome{
-background-image: url("./image/code-white.jpg");
+background-image: url("../image/code-white.jpg");
 background-size: cover;
 padding-bottom: var(--main-padding);
 padding-top: var(--main-padding);
